# robotdan

./: .gitignore  README.md  스마트 농업 혁신 .md
DB/: package-lock.json  seed.sql  setup_db.py  sf.sql  sf.vuerd.json
ai_server/: main.py  requirements.txt  test_sender.py
gui/: README.md
gui/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
gui/install/lovo_gui/lib/lovo_gui/: lovo_gui
gui/install/lovo_gui/share/lovo_gui/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
gui/install/lovo_interfaces/share/lovo_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  (+1 more)
gui/log/: latest_build
gui/lovo_gui/: package.xml  robotname.json  setup.cfg  setup.py
gui/lovo_gui/lovo_gui/: communication.py  config_manager.py  constants.py  main_window.py  main_window_backup.py  main_window_new.py  robotname.json
gui/lovo_gui/lovo_gui/controllers/: robot_controller.py
gui/lovo_gui/lovo_gui/tabs/: communication_tab.py  log_tab.py  main_tab.py  manual_tab.py  monitoring_tab.py
gui/lovo_gui/lovo_gui/widgets/: amr_dashboard.py  camera_dialog.py  robot_dashboard.py  vision_widget.py
gui/lovo_interfaces/: CMakeLists.txt
gui/lovo_main_server/: package.xml  setup.cfg  setup.py
gui/lovo_main_server/lovo_main_server/: database_manager.py  main_server_node.py
server/: app.py
stc/: sketch.py
web/: about.html  cart.html  furniture-detail.html  furniture.html  index.html  materials.html  monitor.html  script.js  style.css  vercel.json
(+57 files in other folders)
