<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lovo_main_server</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="j01028957795@gmail.com">addinedu</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>lovo_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
